crates/parser/tests/cases/snapshots/cases__errors__stmt_vardecl_invalid_name.snap
---
source: crates/parser/tests/cases/errors.rs
expression: "err_string(stringify!(stmt_vardecl_invalid_name), functions::parse_stmt,\n    \"let x + y: u8\")"

---
error: failed to parse variable declaration
  ┌─ stmt_vardecl_invalid_name:1:5
  │
1 │ let x + y: u8
  │     ^^^^^ invalid variable declaration target
  │
  = The left side of a variable declaration can be either a name
    or a non-empty tuple.


